--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libs/JUCE"]
 	path = libs/JUCE
-	url = https://github.com/juce-framework/JUCE
+	url = https://github.com/poweraudio/JUCE
 [submodule "libs/oddsound-mts/MTS-ESP"]
 	path = libs/oddsound-mts/MTS-ESP
 	url = https://github.com/ODDSound/MTS-ESP
